# c

./: CMakeLists.txt  ip_GET.cpp  ip_GET.h  main.cpp
Collect/ip_collect/: ip_collect.cpp  ip_collect.h  ip_collect.ui
Login/: login.cpp  login.h  login.ui
MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
index/: index.cpp  index.h  index.ui
